--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:frontend": "cd playerOne && npm run build",
+    "build:frontend": "cd frontend && npm run build",
     "sall": "npm run build:frontend && npm start"
   },
   "keywords": [],
