--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "@shadcn/ui": "^0.0.4"
   }
 }
