--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.0.6",
-    "lucide-react": "^0.485.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.5",
-    "tw-animate-css": "^1.2.5"
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
