--- a/package.json
+++ b/package.json
@@ -20,21 +20,11 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@heroicons/react": "^1.0.6",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.7",
+    "@supabase/supabase-js": "^2.57.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-session": "^1.18.1",
     "joi": "^17.13.3",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.12.0",
-    "passport": "^0.6.0",
-    "passport-apple": "^2.0.2",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
